--- a/src/views/404.ejs
+++ b/src/views/404.ejs
@@ -1,8 +1,7 @@
 <%- include('includes/head') %> 
 
 <section class="container">
-  <h1>
-  </h1>
+  <h1>The requested Page Doesn't exists</h1>
   </form>
 </section>
 
