--- a/frontend/assets/css/style.css
+++ b/frontend/assets/css/style.css
@@ -2,11 +2,19 @@
 :root {
   --primary-color: rgb(17, 86, 102);
   --primary-color-darker: rgb(9, 48, 56);
+  --nav-link-color: rgb(15, 15, 15);
+  --error-color: rgb(255,148,148);
+  --success-color: #28a745
 }
 
 * {
   box-sizing: border-box;
   outline: 0;
+}
+
+a{
+  text-decoration: none;
+  color: var(--nav-link-color)
 }
 
 body {
@@ -19,7 +27,7 @@ body {
 }
 
 .container {
-  max-width: 640px;
+  max-width: 960px;
   margin: 50px auto;
   background: #fff;
   padding: 20px;
@@ -55,4 +63,76 @@ form button {
 
 form button:hover {
   background: var(--primary-color-darker);
+}
+
+.nav-bar{
+  height: 3em;
+  background-color: azure;
+}
+
+.nav-bar ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.nav-bar ul li{
+  display: inline;
+  border-top: 1em;
+}
+
+.nav-bar ul li a{
+  display: inline-block;
+  padding: 0.75em;
+  font-weight: 550;
+}
+
+.nav-bar ul li a:hover{
+  background-color: rgb(208, 225, 231);
+}
+
+.table{
+  width: 100%;
+}
+
+.table tr th{
+  text-align: left;
+}
+
+.table tr td{
+  margin: auto;
+  padding-top: 0.5em;
+  border-bottom:1px solid rgb(173, 211, 233);
+  box-shadow: #fff;
+}
+
+.login{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
+}
+
+.form{
+  display: block;
+}
+
+.messages{
+  height: 80px;
+  font-size: small;
+  padding: 5px;
+  border: 1px solid;
+  border-radius: 5px;
+  font-weight: bold;
+}
+
+.error-message{
+  color: white;
+  background-color: var(--error-color);
+  border-color: rgb(255, 110, 110);
+}
+
+.success-message{
+  color: white;
+  background-color: var(--success-color);
+  border-color: rgb(124, 243, 130);
 }
