--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -3,7 +3,7 @@
 
 <section class="container">
  
-  <div class="flash-message success"></div>
+  <%- include('includes/messages') %>
   <table class="table">
       <thead>
           <tr>
